<resources>
    <string name="app_name">LifePlus</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="phone">Phone</string>
    <string name="profile">Profile</string>
    <string name="details">Details</string>
</resources>